#190 Fixed the NPE in DefaultTokenExtractor